[package]
name = "yote_recordstore_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
proc-macro = true

[dependencies]
bincode = "1.3"
recordstore_macros = { path = "./recordstore_macros" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
thiserror = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive", "parsing" ] }