[package]
name = "yote_recordstore_rust"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["lib"]
proc-macro = true
[dependencies]
bincode = "1.3"
byteorder = "1"
named-lock = "0.4.1"
tempfile = "3"
thiserror = "1.0"

erased-serde = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
lazy_static = "1.4"
syn = { version = "2.0", features = ["derive", "parsing" ] }
quote = "1.0"