[package]
name = "yote_recordstore_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
proc-macro = true

[dependencies]
bincode = "1.3"
quote = "1.0"
recordstore_macros = { path = "./recordstore_macros" }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "2.0", features = ["derive", "parsing" ] }
tempfile = "3"
thiserror = "1.0"

#lazy_static = "1.2.0"
once_cell = "1"
ctor = "0.2"

regex = "1"
